[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/UI/Icons/Blue_On.png" type="Texture" id=1]
[ext_resource path="res://assets/images/UI/android_controller/medkit_on.png" type="Texture" id=2]
[ext_resource path="res://assets/images/UI/android_controller/dodge_off.png" type="Texture" id=3]
[ext_resource path="res://assets/images/UI/android_controller/medkit_off.png" type="Texture" id=4]
[ext_resource path="res://assets/images/UI/android_controller/block_on.png" type="Texture" id=5]
[ext_resource path="res://assets/images/UI/android_controller/block_off.png" type="Texture" id=6]
[ext_resource path="res://assets/images/UI/android_controller/dodge_on.png" type="Texture" id=7]
[ext_resource path="res://assets/images/UI/android_controller/stagger_on.png" type="Texture" id=8]
[ext_resource path="res://assets/images/UI/android_controller/stagger_off.png" type="Texture" id=9]
[ext_resource path="res://assets/images/UI/Icons/Blue_Off.png" type="Texture" id=10]
[ext_resource path="res://assets/images/UI/Icons/Red_Off.png" type="Texture" id=11]
[ext_resource path="res://assets/images/UI/android_controller/move_2_on.png" type="Texture" id=12]
[ext_resource path="res://assets/images/UI/Icons/Yellow_On.png" type="Texture" id=13]
[ext_resource path="res://assets/images/UI/Icons/Yellow_Off.png" type="Texture" id=14]
[ext_resource path="res://assets/images/UI/android_controller/attack_of.png" type="Texture" id=15]
[ext_resource path="res://assets/images/UI/android_controller/move_2_off.png" type="Texture" id=16]
[ext_resource path="res://assets/images/UI/android_controller/attack_on.png" type="Texture" id=17]
[ext_resource path="res://assets/images/UI/Icons/Red_On.png" type="Texture" id=18]
[ext_resource path="res://assets/scripts/android_controller.gd" type="Script" id=19]
[ext_resource path="res://MarcoFazio joystick/joystick/virtual_joystick.tscn" type="PackedScene" id=20]

[node name="android_controller" type="CanvasLayer"]
visible = false
script = ExtResource( 19 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Virtual joystick" parent="Control" instance=ExtResource( 20 )]
joystick_mode = 1
visibility_mode = 1

[node name="Button_Right" type="TouchScreenButton" parent="Control"]
position = Vector2( 850, 545 )
scale = Vector2( 4, 4 )
normal = ExtResource( 16 )
pressed = ExtResource( 12 )
action = "ui_right"
visibility_mode = 1

[node name="Button_Left" type="TouchScreenButton" parent="Control"]
position = Vector2( 430, 689 )
rotation = 3.14159
scale = Vector2( 4, 4 )
normal = ExtResource( 16 )
pressed = ExtResource( 12 )
action = "ui_left"
visibility_mode = 1

[node name="Button_Jump" type="TouchScreenButton" parent="Control"]
position = Vector2( 174, 545 )
rotation = -1.5708
scale = Vector2( 4, 4 )
normal = ExtResource( 16 )
pressed = ExtResource( 12 )
action = "space"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Katana" type="TouchScreenButton" parent="Control"]
position = Vector2( 938, 38 )
scale = Vector2( 4, 4 )
normal = ExtResource( 14 )
pressed = ExtResource( 13 )
action = "katana"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Hammer" type="TouchScreenButton" parent="Control"]
position = Vector2( 1052, 38 )
scale = Vector2( 4, 4 )
normal = ExtResource( 11 )
pressed = ExtResource( 18 )
action = "hammer"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Katar" type="TouchScreenButton" parent="Control"]
position = Vector2( 1166, 38 )
scale = Vector2( 4, 4 )
normal = ExtResource( 10 )
pressed = ExtResource( 1 )
action = "katar"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Medkit" type="TouchScreenButton" parent="Control"]
position = Vector2( 965, 440 )
scale = Vector2( 3, 3 )
normal = ExtResource( 2 )
pressed = ExtResource( 4 )
action = "medkit"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Attack" type="TouchScreenButton" parent="Control"]
position = Vector2( 1105, 545 )
scale = Vector2( 3, 3 )
normal = ExtResource( 17 )
pressed = ExtResource( 15 )
action = "attack"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Block" type="TouchScreenButton" parent="Control"]
position = Vector2( 1105, 330 )
scale = Vector2( 3, 3 )
normal = ExtResource( 5 )
pressed = ExtResource( 6 )
action = "block"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Stagger" type="TouchScreenButton" parent="Control"]
position = Vector2( 1105, 330 )
scale = Vector2( 3, 3 )
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
action = "stagger"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Button_Dodge" type="TouchScreenButton" parent="Control"]
position = Vector2( 1105, 330 )
scale = Vector2( 3, 3 )
normal = ExtResource( 7 )
pressed = ExtResource( 3 )
action = "dodge"
visibility_mode = 1
__meta__ = {
"_edit_lock_": true
}
